syntax = "proto3";

package ai.metathings.service.camerad;

import "github.com/nayotta/metathings/pkg/proto/camera/camera.proto";

import "camera.proto";

message CallbackRequest {
	OpConfig config = 1;
	ai.metathings.service.camera.CameraState state = 2;
}
