syntax = "proto3";

package ai.metathings.service.camerad;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "camera.proto";

message StartRequest {
	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
}

message StartResponse {
	Camera camera = 1;
}
