syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "application_credential.proto";

message GetApplicationCredentialRequest {
	google.protobuf.StringValue user_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue application_credential_id = 2 [(validator.field) = {msg_exists: true}];
}

message GetApplicationCredentialResponse {
	ApplicationCredential application_credential = 1;
}
