syntax = "proto3";

package ai.metathings.service.streamd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "stream.proto";

message ListForUserRequest {
	google.protobuf.StringValue name = 1;
	StreamState state = 2;
}

message ListForUserResponse {
	repeated Stream streams = 1;
}
